# chess-world-cup

./: .gitignore  CMakeLists.txt  README.md
analysis/: bench_nps.py  build_site_data.py  metrics.py  report.py  run_bracket.py  run_tournament.py  worldcup.py
analysis/data/: wc2026.json
books/: openings.txt
bots/cpp-alphabeta/: alphabeta.cpp  eval.h
bots/cpp-analyst/: analyst.cpp
bots/cpp-greedy/: greedy.cpp
bots/js-alphabeta/: build.sh  js-alphabeta  libchess.js  libchess.wasm
bots/py-alphabeta/: py-alphabeta
bots/py-greedy/: py-greedy
bots/py-mcts/: py-mcts
bots/py-minimax/: py-minimax
bots/random/: random.cpp
bots/rs-alphabeta/: Cargo.toml  build.rs
bots/rs-alphabeta/src/: main.rs
docker/: README.md  base.Dockerfile  cpp-alphabeta.Dockerfile  py-mcts.Dockerfile  random.Dockerfile
libchess/include/libchess/: bitboard.h  board.h  c_api.h  types.h  uci.h
libchess/src/: bitboard.cpp  board.cpp  c_api.cpp  uci.cpp
orchestrator/: orchestrator.cpp  process.cpp  process.h
runs/: bracket.json  bracket.summary  gate5.sh  gate5_nodes.summary  gate5_time.summary  group.summary  nps_bench.json  rerun.sh  rerun2.sh  tax.sh  tax_nodes.summary  tax_time.summary
shim/cpp/: shim.cpp  shim.h
shim/py/: libchess_ffi.py  shim.py
tests/: perft.cpp
ui/: api_analysis.py  api_betting.py  app.js  index.html  live_server.py  serve.py  style.css
ui/css/: about.css  analysis.css  base.css  betting.css  board.css  components.css  tokens.css  tournament.css  watch.css
ui/data/: tournament.json
ui/js/: about.js  analysis.js  betting.js  board.js  boot.js  charts.js  core.js  tournament.js  watch.js
